--- a/.github/workflows/build_or_release.yml
+++ b/.github/workflows/build_or_release.yml
@@ -16,14 +16,8 @@ jobs:
       with:
         dotnet-version: '8.0.x'
 
-    - name: Restore dependencies
-      run: dotnet restore
-
-    - name: Build
-      run: dotnet build --configuration Release --no-restore
-
     - name: Publish
-      run: dotnet publish --configuration Release --output ./publish --no-build
+      run: dotnet publish -p:PublishProfile=FolderProfile --output ./publish 
 
     - name: Upload to artifacts
       uses: actions/upload-artifact@v4
