--- a/.github/workflows/build_or_release.yml
+++ b/.github/workflows/build_or_release.yml
@@ -25,7 +25,7 @@ jobs:
          name: NumberDrawing
          path: ./publish/NumberDrawing.exe
 
-  publish:
+  release:
     runs-on: windows-latest
     if: ${{ startsWith(github.ref, 'refs/tags/') }}
     needs: [build]
