--- a/.github/workflows/build_or_release.yml
+++ b/.github/workflows/build_or_release.yml
@@ -25,23 +25,8 @@ jobs:
          name: NumberDrawing
          path: ./publish/NumberDrawing.exe
 
-  release:
-    runs-on: windows-latest
-    if: ${{ startsWith(github.ref, 'refs/tags/') }}
-    needs: [build]
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      
-      - name: Download artifacts
-        uses: actions/download-artifact@v4
-        with:
-          path: ./releases
-
-      - name: Upload to releases
-        uses: softprops/action-gh-release@v2
-        with:
-          draft: true
-          files: ./releases
+    - name: Upload to releases
+      uses: softprops/action-gh-release@v2
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
+          files: ./publish/NumberDrawing.exe
